# ChangeLog for gnustep-base/gnustep-back-art
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnustep-base/gnustep-back-art/ChangeLog,v 1.59 2008/06/10 14:17:51 voyageur Exp $

  10 Jun 2008; Bernard Cafarelli <voyageur@gentoo.org>
  -gnustep-back-art-0.12.0.ebuild:
  Stable gnustep versions cleanup

  23 Mar 2008; nixnut <nixnut@gentoo.org> gnustep-back-art-0.12.1.ebuild:
  Stable on ppc wrt bug 207381

  23 Mar 2008; Raúl Porcel <armin76@gentoo.org>
  gnustep-back-art-0.12.1.ebuild:
  sparc stable wrt #207381

  22 Mar 2008; Santiago M. Mola <coldwind@gentoo.org>
  gnustep-back-art-0.12.1.ebuild:
  amd64 stable wrt bug #207381, second round.

  21 Mar 2008; Christian Faulhammer <opfer@gentoo.org>
  gnustep-back-art-0.12.1.ebuild:
  stable x86, bug 207381

  20 Mar 2008; Bernard Cafarelli <voyageur@gentoo.org>
  -gnustep-back-art-0.13.1.ebuild, +gnustep-back-art-0.13.2.ebuild:
  Unstable version bump

*gnustep-back-art-0.13.1 (09 Jan 2008)

  09 Jan 2008; Bernard Cafarelli <voyageur@gentoo.org>
  +gnustep-back-art-0.13.1.ebuild:
  Add unstable version

*gnustep-back-art-0.12.1 (03 Jan 2008)

  03 Jan 2008; Bernard Cafarelli <voyageur@gentoo.org>
  +gnustep-back-art-0.12.1.ebuild:
  Stable version bump

  08 Dec 2007; Bernard Cafarelli <voyageur@gentoo.org>
  -files/font-make-fix.patch-0.10.3, -files/font-make-fix.patch-0.11.0,
  -files/config-gnustep-back-art.sh, -gnustep-back-art-0.10.3.ebuild,
  -gnustep-back-art-0.11.0.ebuild:
  Remove old versions

  06 Dec 2007; Raúl Porcel <armin76@gentoo.org>
  gnustep-back-art-0.12.0.ebuild:
  sparc stable wrt #195990

  16 Nov 2007; Steve Dibb <beandog@gentoo.org>
  gnustep-back-art-0.12.0.ebuild:
  amd64 stable, bug 195990

  27 Oct 2007; nixnut <nixnut@gentoo.org> gnustep-back-art-0.12.0.ebuild:
  Stable on ppc wrt bug 195990

  17 Oct 2007; Christian Faulhammer <opfer@gentoo.org>
  gnustep-back-art-0.12.0.ebuild:
  stable x86, bug 195990
