@@ -1,6 +1,12 @@
 # ChangeLog for gnustep-base/gnustep-back-art
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnustep-base/gnustep-back-art/ChangeLog,v 1.59 2008/06/10 14:17:51 voyageur Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnustep-base/gnustep-back-art/ChangeLog,v 1.60 2008/06/16 09:56:01 voyageur Exp $
+
+*gnustep-back-art-0.14.0 (16 Jun 2008)
+
+  16 Jun 2008; Bernard Cafarelli <voyageur@gentoo.org>
+  -gnustep-back-art-0.13.2.ebuild, +gnustep-back-art-0.14.0.ebuild:
+  New stable branch, remove unstable version
 
   10 Jun 2008; Bernard Cafarelli <voyageur@gentoo.org>
   -gnustep-back-art-0.12.0.ebuild:
